--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KTT</title>
 </head>
 <body>
-    あ
+    <header>
+        <div class="pc-menu">
+            <ul>
+                <li><a href="">トップ</a></li>
+                <li><a href="">お問い合わせ</a></li>
+                <li><a href="">ログイン</a></li>
+                <li><a href="">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
