--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="top-logo">
+            <img src="img/logo-top.png">
+        </div>
         <div class="pc-menu">
             <ul>
                 <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
