--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="pc-menu">
             <ul>
                 <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
-                <li><a href="">トップ</a></li>
+                <a href=""><li>トップ</li></a>
                 <li><a href="">お問い合わせ</a></li>
                 <li><a href="">ログイン</a></li>
                 <li><a href="">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
