--- a/index.html
+++ b/index.html
@@ -15,23 +15,12 @@
         <div class="pc-menu">
             <ul>
                 <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
-                <a href=""><li>トップ</li></a>
-                <a href=""><li>お問い合わせ</li></a>
-                <a href=""><li>ログイン</li></a>
-                <a href=""><li>マイページ<!-- 今後アイコンにする可能性あり --></li></a>
+                <li><a href="">トップ</a></li>
+                <li><a href="">お問い合わせ</a></li>
+                <li><a href="">ログイン</a></li>
+                <li><a href="">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
             </ul>
         </div>
     </header>
 </body>
-<script>
-    let lists = document.querySelectorAll('li');
-for(let i=0;i<lists.length;i++){
-    // 全liそれぞれに対する「クリックされたとき」の処理
-    lists[i].addEventListener('click',function(){
-        // クリックされたliの子要素 aタグのリンク先を取得
-        let href = this.querySelector('a').getAttribute('href');
-        // 現在のタブで開く
-        location.href = href;
-    })};
-</script>
 </html>
