--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
             </ul>
         </div>
     </header>
+    <div class="aboutus">
+        <h1>KTT Projectsとは</h1>
+    </div>
 </body>
 </html>
