文章少しだけ考えた

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
     <div class="aboutus">
         <h1>KTT Projectsとは</h1>
+        <p>私たち、KTT Projectsは中学3年生で構成されている集団です。</p>
     </div>
 </body>
 </html>
