--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <header>
+        <div class="box-1">
+        <div class="back-color">
         <div class="top-logo">
             <img src="img/logo-top.png">
         </div>
+        
         <div class="pc-menu">
             <ul>
                 <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
@@ -21,10 +24,26 @@
                 <li><a href="">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
             </ul>
         </div>
+        <div style="height: 20px;"></div>
+        </div>
+        </div>
     </header>
+    <main>
+        <div class="box-2">
     <div class="aboutus">
         <h1>KTT Projectsとは</h1>
-        <p>私たち、KTT Projectsは中学3年生で構成されている集団です。</p>
+        <div class="aboutus-text">
+        <p>私たち、KTT Projectsは中学3年生で構成されているグループ名です。</p>
+        <p>メンバーは１０名弱で構成され、それぞれの得意分野を活かして活動をしています。</p>
+        <p>インターネットを拠点に地域活性化、</p>
+        </div>
     </div>
+    </div>
+    <div class="box-3">
+        <div class="about-job">
+            <h1>活動内容</h1>
+        </div>
+    </div>
+</main>
 </body>
 </html>
