css変更してみました

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <header>
         <div class="box-1">
         <div class="back-color">
-        <div class="top-logo">
-            <img src="img/logo-top.png">
-        </div>
-        
         <div class="pc-menu">
             <ul>
                 <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
@@ -24,23 +20,23 @@
                 <li><a href="">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
             </ul>
         </div>
-        <div style="height: 20px;"></div>
+        <div class="top-logo">
+            <img src="img/logo-top.png">
+        </div>
         </div>
         </div>
     </header>
     <main>
-        <div class="box-2">
-    <div class="aboutus">
-        <h1>KTT Projectsとは</h1>
-        
-        <div class="aboutus-text">
-        <p>私たち、KTT Projectsは中学3年生で構成されているグループ名です。</p>
-        <p>メンバーは１０名弱で構成され、それぞれの得意分野を活かして活動をしています。</p>
-        <p>インターネットを拠点に地域活性化、</p>
-        </div>
-
-    </div>
-    </div>
+        <section class="aboutus">
+            <div class="aboutus_inner">
+                <h1>KTT Projectsとは</h1>
+                <div class="aboutus-text">
+                <p>私たち、KTT Projectsは中学3年生で構成されているグループ名です。</p>
+                <p>メンバーは１０名弱で構成され、それぞれの得意分野を活かして活動をしています。</p>
+                <p>インターネットを拠点に地域活性化、</p>
+                </div>
+            </div>
+        </section>
     <div class="box-3">
         <div class="about-job">
             <h1>活動内容</h1>
