--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </ul>
         </div>
         <div class="top-logo">
-            <img src="img/logo-top.png">
+            <!-- <img src="img/logo-top.png"> -->
+            <!-- 背景に画像を挿入する実験中 -->
         </div>
         </div>
         </div>
