--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="aboutus_inner">
                 <h1>KTT Projectsとは</h1>
                 <div class="aboutus-text">
-                <p>KTT PROJECTSとは中学3年生10人弱（2022年）で構成されたグループです。2021年に3人で結成され、現在は10人弱となっています。
+                <p class="explain">KTT PROJECTSとは中学3年生10人弱（2022年）で構成されたグループです。2021年に3人で結成され、現在は10人弱となっています。
                     本グループではメンバー全員がそれぞれの得意分野を活かして様々なプロジェクトを行なっています。
                     我々は、数学, 統計学, 経済, コンピュータサイエンス, デザインなどのそれぞれの得意分野を活かして二つのグループに分かれ、
                     アプリケーション制作, AI, ハードウェア, OS, ゲームなど様々なプロジェクトを行い、世界に共有していきます。</p>
