デザイン大幅改変

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <div class="box-1">
         <div class="back-color">
-        <div class="pc-menu">
+        <div class="pc-menu" id="color1">
             <ul>
                 <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
-                <li><a href="">トップ</a></li>
-                <li><a href="">お問い合わせ</a></li>
-                <li><a href="">ログイン</a></li>
-                <li><a href="">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
+                <li><a href="" id="color2">トップ</a></li>
+                <li><a href="" id="color2">お問い合わせ</a></li>
+                <li><a href="" id="color2">ログイン</a></li>
+                <li><a href="" id="color2">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
             </ul>
         </div>
         <div class="top-logo">
@@ -28,14 +28,14 @@
         </div>
     </header>
     <main>
+        <div class="example" style="height: 500px;">
+            <!-- 例 -->
+        </div>
         <section class="aboutus">
             <div class="aboutus_inner">
                 <h1>KTT Projectsとは</h1>
                 <div class="aboutus-text">
-                <p class="explain">KTT PROJECTSとは中学3年生10人弱（2022年）で構成されたグループです。2021年に3人で結成され、現在は10人弱となっています。
-                    本グループではメンバー全員がそれぞれの得意分野を活かして様々なプロジェクトを行なっています。
-                    我々は、数学, 統計学, 経済, コンピュータサイエンス, デザインなどのそれぞれの得意分野を活かして二つのグループに分かれ、
-                    アプリケーション制作, AI, ハードウェア, OS, ゲームなど様々なプロジェクトを行い、世界に共有していきます。</p>
+                <p>KTT PROJECTSとは中学3年生10人弱（2022年）で構成されたグループです。2021年に3人で結成され、現在は10人弱となっています。 本グループではメンバー全員がそれぞれの得意分野を活かして様々なプロジェクトを行なっています。 我々は、数学, 統計学, 経済, コンピュータサイエンス, デザインなどのそれぞれの得意分野を活かして二つのグループに分かれ、 アプリケーション制作, AI, ハードウェア, OS, ゲームなど様々なプロジェクトを行い、世界に共有していきます。</p>
                 </div>
             </div>
         </section>
@@ -45,5 +45,6 @@
         </div>
     </div>
 </main>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
