主にスクロールによる色変更を調整

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
         <div class="box-1">
         <div class="back-color">
         <div class="pc-menu" id="color1">
-            <ul>
-                <svg class="logo" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg>
-                <li><a href="" id="color2">トップ</a></li>
-                <li><a href="" id="color2">お問い合わせ</a></li>
-                <li><a href="" id="color2">ログイン</a></li>
-                <li><a href="" id="color2">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
+            <ul id="color2">
+                <div id="svg_color">
+                <a href="#top"><svg class="svg" viewBox="0 0 1000 714"><path d="M0,0 h1000 v714 h-90 v-604 h-820 v603 h-90z M0,300 h1000 v110 h-1000z M305,0 h145 l605,714 h-145z M550,0 h145 l-605,714 h-145" /></svg></a>
+                </div>
+                <li><a href="" class="link1">トップ</a></li>
+                <li><a href="" class="link2">お問い合わせ</a></li>
+                <li><a href="" class="link3">ログイン</a></li>
+                <li><a href="" class="link4">マイページ<!-- 今後アイコンにする可能性あり --></a></li>
             </ul>
         </div>
         <div class="top-logo">
