活動内容について

--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
     <div class="box-3">
         <div class="about-job">
             <h1>活動内容</h1>
+            <div class="job-in">
+            <div class="job-1">
+            <p class="job-img1"></p>
+            <p>大崎上島<br>コミュニティーサイト</p>
+            </div>
+            <div class="job-2">
+            <p class="job-img2"></p>
+            <p>HiGA Coin</p>
+            </div>
+            <div class="job-3">
+            <p class="job-img3"></p>
+            <p>ネット犯罪啓発運動</p>
+            </div>
+            <div class="job-4">
+            <p class="job-img4"></p>
+            <p>ミニゲーム</p>
+            </div>
+        </div>
         </div>
     </div>
 </main>
