実績部分（シスコム側から拒否されればこの部分は削除する必要があるかも）

--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@
         </div>
         </div>
     </div>
+    <div class="outcome">
+        <h1>実績</h1>
+        <div>
+            <div class="o-inbox">
+                <div class="o-main">
+                    <!-- Background Image -->
+                    <p class="o-main-text"></p>
+                </div>
+                <div class="o-select">
+                    <a href="">
+                        <div class="o-s-inbox o_s_i_1">
+                            <p>シスコム様 共同プロジェクト</p>
+                            <p>業務連絡：シスコムとKTTにあまりつながりがないので要相談。シスコム側からの許可も必要</p>
+                        </div>
+                    </a>
+                    <hr>
+                    <a href="">
+                        <div class="o-s-inbox o_s_i_2">
+                            <p>ホームページ作成</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
