--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e4a9507649.js" crossorigin="anonymous"></script>
     <title>KTT | トップ</title>
     <!-- アイコン -->
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
@@ -108,7 +109,49 @@
             </div>
         </div>
     </div>
+    <a href="">
+    <div class="overview">
+        <div class="o-img">
+            <img src="img/overview.png">
+        </div>
+        <div class="o-text">
+            <p>組織概要</p>
+        </div>
+    </div>
+    </a>
+    <div class="faq">
+        <h1>よくあるお問い合わせ</h1>
+        <p>お問い合わせをお待ちしています</p>
+    </div>
 </main>
+<footer>
+    <section class="f-section1">
+        <div class="f-page">
+            <p><a href="">KTT Projectsとは</a></p>
+            <p><a href="">活動内容</a></p>
+            <p><a href="">実績</a></p>
+        </div>
+        <div class="f-page">
+            <p><a href="">よくあるお問い合わせ</a></p>
+            <p><a href="">お問い合わせ</a></p>
+        </div>
+        <div class="f-page">
+            <p><a href="">ログイン</a></p>
+            <p><a href="">マイページ</a></p>
+            <p><a href="">アカウント設定</a></p>
+        </div>
+    </section>
+    <section class="f-section2">
+        <div class="writing f-under">
+            <p class="copyright">Copyright ©︎ 2022 KTT Projects.</p>
+            <p><a href="">　利用規約</a></p>
+            <p><a href="">　プライバシーポリシー</a></p>
+        </div>
+        <div class="f-icon f-under">
+            <a href="https://m.youtube.com/channel/UCihqEDqGrLOOrs0o-IBulqw"><i class="fa-brands fa-youtube f-youtube"></i></a>
+        </div>
+    </section>
+</footer>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
