--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
             <p><a href="">ログイン</a></p>
             <p><a href="">マイページ</a></p>
             <p><a href="">アカウント設定</a></p>
+            <br>
+            <div id="admin">
+            <p><button type="button" class="admin_popup">管理者</button></p>
+            </div>
         </div>
     </section>
     <section class="f-section2">
