--- a/index.html
+++ b/index.html
@@ -57,33 +57,41 @@
             <div class="aboutus_inner">
                 <h1>KTT Projectsとは</h1>
                 <div class="aboutus-text">
-                <p>KTT PROJECTSとは中学3年生10人弱（2022年）で構成されたグループです。2021年に3人で結成され、現在は10人弱となっています。 本グループではメンバー全員がそれぞれの得意分野を活かして様々なプロジェクトを行なっています。 我々は、数学, 統計学, 経済, コンピュータサイエンス, デザインなどのそれぞれの得意分野を活かして二つのグループに分かれ、 アプリケーション制作, AI, ハードウェア, OS, ゲームなど様々なプロジェクトを行い、世界に共有していきます。</p>
+                <p>KTT PROJECTSとは学生10人弱（2022年）で構成されたグループです。2021年に3人で結成され、現在は10人弱となっています。 本グループではメンバー全員がそれぞれの得意分野を活かして様々なプロジェクトを行なっています。 我々は、数学, 統計学, 経済, コンピュータサイエンス, デザインなどのそれぞれの得意分野を活かして二つのグループに分かれ、 アプリケーション制作, AI, ハードウェア, OS, ゲームなど様々なプロジェクトを行い、世界に共有していきます。</p>
                 </div>
             </div>
         </section>
-    <div class="box-3">
-        <div class="about-job">
-            <h1>活動内容</h1>
-            <div class="job-in">
-                <div class="job-1">
-                    <p class="job-img1"></p>
-                    <p>大崎上島<br>コミュニティーサイト</p>
-                </div>
-                <div class="job-2">
-                    <p class="job-img2"></p>
-                    <p>HiGA Coin</p>
-                </div>
-                <div class="job-3">
-                    <p class="job-img3"></p>
-                    <p>ネット犯罪啓発運動</p>
-                </div>
-                <div class="job-4">
-                    <p class="job-img4"></p>
-                    <p>ミニゲーム</p>
+        <div class="box-3">
+            <div class="about-job">
+                <h1>活動内容</h1>
+                <div class="job-in">
+                    <a href="" class="job-a">
+                        <div class="job-1 job-box-in">
+                            <p class="job-img1"></p>
+                            <p class="job-p">大崎上島<br>コミュニティーサイト</p>
+                        </div>
+                    </a>
+                    <a href="" class="job-a">
+                        <div class="job-2 job-box-in">
+                            <p class="job-img2"></p>
+                            <p class="job-p">HiGA Coin</p>
+                        </div>
+                    </a>
+                    <a href="" class="job-a">
+                        <div class="job-3 job-box-in">
+                            <p class="job-img3"></p>
+                            <p class="job-p">ネット犯罪啓発運動</p>
+                        </div>
+                    </a>
+                    <a href="" class="job-a">
+                        <div class="job-4 job-box-in">
+                            <p class="job-img4"></p>
+                            <p class="job-p">ミニゲーム</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-    </div>
     <div class="outcome">
         <h1>実績</h1>
         <div>
