--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <a href="">
                         <div class="o-s-inbox o_s_i_1">
                             <p>シスコム様 共同プロジェクト</p>
-                            <p>業務連絡：シスコムとKTTにあまりつながりがないので要相談。シスコム側からの許可も必要</p>
+                            <!-- <p>業務連絡：シスコムとKTTにあまりつながりがないので要相談。シスコム側からの許可も必要</p> -->
                         </div>
                     </a>
                     <hr>
