--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
         </div>
     <div class="outcome">
         <h1>実績</h1>
+        <!-- <p>できれば実績3つ欲しい</p> -->
         <div>
             <div class="o-inbox">
-                <div class="o-main">
+                <!-- <div class="o-main"> -->
                     <!-- Background Image -->
                     <p class="o-main-text"></p>
                 </div>
@@ -107,12 +108,16 @@
                             <!-- <p>業務連絡：シスコムとKTTにあまりつながりがないので要相談。シスコム側からの許可も必要</p> -->
                         </div>
                     </a>
-                    <hr>
                     <a href="">
                         <div class="o-s-inbox o_s_i_2">
                             <p>ホームページ作成</p>
                         </div>
                     </a>
+                    <a href="">
+                        <div class="o-s-inbox o_s_i_3">
+                            <p>賞の受賞</p>
+                        </div>
+                    </a>    
                 </div>
             </div>
         </div>
