ちょっと変えた

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                     </a>
                     <a href="">
                         <div class="o-s-inbox o_s_i_2">
-                            <p>ホームページ作成</p>
+                            <p>コミュニティーサイト</p>
                         </div>
                     </a>
                     <a href="">
                         <div class="o-s-inbox o_s_i_3">
-                            <p>賞の受賞</p>
+                            <p>コンテスト入賞</p>
                         </div>
                     </a>    
                 </div>
